--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,8 +16,8 @@ tauri-build = { version = "1.1", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.1", features = ["dialog-all", "system-tray"] }
-rodio = "0.17.0"
+tauri = { version = "1.1", features = ["dialog-all", "fs-all", "system-tray"] }
+rodio = "0.17.1"
 
 [features]
 # by default Tauri runs in production mode
