--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "Pommodor_Timer"
+name = "pomodoro_timer"
 version = "0.1.0"
 description = "A Tauri App"
 authors = ["you"]
@@ -16,7 +16,7 @@ tauri-build = { version = "1.1", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.1", features = ["dialog-all", "fs-all", "system-tray"] }
+tauri = { version = "1.1", features = ["dialog-ask", "fs-read-file", "system-tray"] }
 rodio = "0.17.1"
 
 [features]
